fixed scrollbar issue. styling adjusctments

--- a/css/console.css
+++ b/css/console.css
@@ -18,7 +18,7 @@
     position: absolute;
     z-index: 0;
     opacity: 0;
-    height: 1px;
+    height: 20px;
     width: 100px;
 }
 
@@ -26,7 +26,7 @@ span.terminal-input {
     width: 900px;
 }
 
-span.terminal-input:after {
+span.terminal-input-typing:after {
     content: "_";
     opacity: 0;
     animation: cursor 1s infinite;
